{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "Player",
            "id": "455c5532-cf91-4315-837e-5daf9afa792d",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Button",
                    "id": "4a769b6b-50f9-42c9-8a14-c38aa84c00b2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "QuickMove",
                    "type": "Button",
                    "id": "8be50786-2a56-4104-9212-94dfcdb9a048",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LocoTarget",
                    "type": "Value",
                    "id": "509afae6-f056-490e-95f2-d3a6ac65db31",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveTarget",
                    "type": "Button",
                    "id": "6e26bb72-4813-4886-a8f8-70e0a84e0249",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "48dedbf1-984a-4298-8712-17090bb78636",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a5391bc-bbed-4f36-85b9-aa98fba50d89",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "QuickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aeef447e-ba4c-48a1-8c47-dc92c7a88d05",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LocoTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ea5d54e-4690-4160-b8f9-11f36f410f1f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}